--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>cesar</title>
   </head>
   <body>
-    <script type="text/javascript" src="app.js">
+    <script>
+    < type="text/javascript" src="app.js">
 
     </script>
 
